# nico

./: .clang-format  .gitignore  CMakeLists.txt  NOTICE.txt  README.md
docs/archive/: control_flow.md  type_name_resolution.md
docs/compiler/: code_style.md
docs/design/: basic_methods.md  binding_entry_linkage.md  borrowed_pointers.md  control_flow.md  error_recovery.md  grammar.md  lvalues.md  mir_and_cfg.md  modifiers.md  name_resolution.md  number_parsing.md  overloading.md  overview.md  ownership.md  repl.md  type_name_resolution.md
include/backend/: jit.h
include/frontend/: code_generator.h  frontend.h  global_checker.h  lexer.h  local_checker.h  parser.h
include/frontend/utils/: ast_node.h  frontend_context.h  nodes.h  symbol_node.h  symbol_tree.h  type_node.h
include/nico/backend/: emitter.h  jit.h  optimizer.h  repl.h
include/nico/driver/: jit_runner.h  repl.h
include/nico/frontend/: code_generator.h  frontend.h  global_checker.h  lexer.h  local_checker.h  parser.h
include/nico/frontend/components/: code_generator.h  global_checker.h  lexer.h  local_checker.h  mir_builder.h  parser.h
include/nico/frontend/utils/: annotation_checker.h  ast_node.h  block.h  control_stack.h  expression_checker.h  frontend_context.h  mir.h  mir_instructions.h  mir_values.h  nodes.h  symbol_node.h  symbol_tree.h  type_node.h
include/nico/shared/: code_file.h  colorize.h  diagnostics.h  dictionary.h  error_code.h  ir_module_context.h  logger.h  sets.h  status.h  token.h  utils.h
include/shared/: ir_module_context.h  logger.h  token.h
src/: main.cpp
src/backend/: emitter.cpp  jit.cpp  optimizer.cpp  repl.cpp
src/checker/: global_checker.cpp  global_checker.h  local_checker.cpp  local_checker.h  symbol_table.cpp  symbol_table.h  symbol_tree.cpp  symbol_tree.h
src/codegen/: block.h  code_generator.cpp  code_generator.h  emitter.cpp  emitter.h  jit.cpp  jit.h  optimizer.cpp  optimizer.h
src/common/: code_file.h  dictionary.h  utils.h
src/compiler/: code_file.h  emitter.cpp  emitter.h  jit.cpp  jit.h  optimizer.cpp
src/debug/: ast_printer.cpp  ast_printer.h  test_utils.cpp  test_utils.h
src/driver/: jit_runner.cpp  repl.cpp
src/frontend/: code_generator.cpp  context.h  frontend.cpp  frontend.h  global_checker.cpp  lexer.cpp  local_checker.cpp  parser.cpp
src/frontend/components/: code_generator.cpp  global_checker.cpp  lexer.cpp  local_checker.cpp  mir_builder.cpp  parser.cpp
src/frontend/utils/: annotation_checker.cpp  ast_node.cpp  control_stack.cpp  expression_checker.cpp  mir.cpp  mir_values.cpp  nodes.cpp  symbol_node.cpp  symbol_tree.cpp  type_node.cpp
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/logger/: error_code.h  logger.cpp  logger.h
src/nodes/: ast_node.h  nodes.h  symbol_node.cpp  symbol_node.h  type_node.h
src/parser/: annotation.h  ast.h  ast_printer.cpp  ast_printer.h  dictionary.h  ident.h  name.h  node.h  parser.cpp  parser.h  stmt.h  symbol_tree.cpp  symbol_tree.h  type.cpp  type.h
src/shared/: diagnostics.cpp  logger.cpp  utils.cpp
test/: checker_local_tests.cpp  jit_tests.cpp  lexer_tests.cpp  parser_expr_tests.cpp  parser_stmt_tests.cpp  parser_tests.cpp  test.cpp  test_utils.cpp  test_utils.h  type_checker_expr_tests.cpp  type_checker_stmt_tests.cpp  type_checker_tests.cpp  utils_tests.cpp
test/examplelib/: CMakeLists.txt
test/examplelib/include/examplelib/: lib.h
test/examplelib/src/: lib.c
test/include/: ast_printer.h  test_jit.h  test_utils.h
test/lib/example/: CMakeLists.txt
test/lib/example/include/example/: lib.h
test/lib/example/src/: lib.c
test/lib/interop/: CMakeLists.txt
test/lib/interop/include/interop/: lib.h
test/lib/interop/src/: lib.c
test/utils/: ast_printer.cpp  ast_printer.h  test_jit.cpp  test_utils.cpp  test_utils.h
